legend-pure-parser/examples/errors/06_enum_errors.pure
###Pure

// ERROR: Enum value with invalid syntax — using = for assignment
Enum model::errors::EnumWithAssignment
{
  Red = 1,
  Blue = 2,
  Green = 3
}
